fix: remove hardcoded secrets and update gitignore